# LoL-Summoner-Status

./: .env  README.md  champion.py  main.py  pyproject.toml  ranked.py  requirements.txt  summoner.py  summonerInfo.py
cogs/: getSummonerInfo.py  initialization.py
src/: champion.py  ranked.py  summonerInfo.py
