[tool.poetry]
name = "league of legends live"
version = "0.1.0"
description = ""
authors = ["Jeremiah Jihoon Park <joon7853@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
discord = "^1.7.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
