[tool.poetry]
name = "league of legends live"
version = "0.1.0"
description = ""
authors = ["Jeremiah Jihoon Park <joon7853@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
discord = "^1.7.3"
discord-py-slash-command = "^2.4.0"
riotwatcher = "^3.1.3"
python-dotenv = "^0.19.0"

[tool.poetry.dev-dependencies]
discord = "^1.7.3"
requests = "^2.26.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
